objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Viadeo__c</fullName>
        <label>Viadeo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>inx__custom_boolean_value_00__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Boolean Value 00</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inx__custom_boolean_value_01__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Boolean Value 01</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inx__custom_boolean_value_02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Boolean Value 02</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inx__custom_date_value_00__c</fullName>
        <label>Custom Date Value 00</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inx__custom_date_value_01__c</fullName>
        <label>Custom Date Value 01</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inx__custom_date_value_02__c</fullName>
        <label>Custom Date Value 02</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inx__custom_float_value_00__c</fullName>
        <label>Custom Float Value 00</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inx__custom_float_value_01__c</fullName>
        <label>Custom Float Value 01</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inx__custom_float_value_02__c</fullName>
        <label>Custom Float Value 02</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inx__custom_integer_value_00__c</fullName>
        <label>Custom Integer Value 00</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inx__custom_integer_value_01__c</fullName>
        <label>Custom Integer Value 01</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inx__custom_integer_value_02__c</fullName>
        <label>Custom Integer Value 02</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inx__custom_text_value_00__c</fullName>
        <label>Custom Text Value 00</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inx__custom_text_value_01__c</fullName>
        <label>Custom Text Value 01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inx__custom_text_value_02__c</fullName>
        <label>Custom Text Value 02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inx__email_is_invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hardbounce from Inxmail Professional</description>
        <inlineHelpText>Hardbounce dans Inxmail Professional</inlineHelpText>
        <label>Email Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inx__recipient_id__c</fullName>
        <description>internal field: Recipient ID from Inxmail Professional</description>
        <externalId>true</externalId>
        <label>Recipient ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>EML_FORMEZ_VOS_COLLABORATEURS</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>Sous_provenance__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Adresse_e_mail__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Entreprise_declare__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sous_provenance__c</field>
            <operation>contains</operation>
            <value>Form Contacter-EML/Solutions-entreprises/Former-vos-collaborateurs</value>
        </filters>
        <filters>
            <field>Sous_provenance__c</field>
            <operation>contains</operation>
            <value>Form-LP/LP campagne media 16</value>
        </filters>
        <label>EML-FORMEZ VOS COLLABORATEURS-INTRA</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>EML_Produit_non_identifi</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Sous_provenance__c</columns>
        <columns>Adresse_e_mail__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sous_provenance__c</field>
            <operation>contains</operation>
            <value>Form Création compte/</value>
        </filters>
        <filters>
            <field>Sous_provenance__c</field>
            <operation>contains</operation>
            <value>Form-LP/</value>
        </filters>
        <filters>
            <field>Sous_provenance__c</field>
            <operation>contains</operation>
            <value>Form Contacter-EML/</value>
        </filters>
        <label>EML-PRODUIT NON IDENTIFIE</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>FI_BBA_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>FI BBA</label>
        <queue>FI_BBA</queue>
        <sharedTo>
            <roleAndSubordinates>BBA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FI_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>FI</label>
        <language>fr</language>
        <queue>FI</queue>
        <sharedTo>
            <group>Vues_DPM</group>
            <roleAndSubordinates>Promo_Recrut_Master</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Financer_sa_formation</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Sous_provenance__c</columns>
        <columns>Adresse_e_mail__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Entreprise_declare__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sous_provenance__c</field>
            <operation>contains</operation>
            <value>Form Contacter-EML/Formations/Financer-sa-formation</value>
        </filters>
        <label>EML-FINANCER SA FORMATION</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Interface</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Sous_provenance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>inte</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>11/30/2015 12:00 AM</value>
        </filters>
        <label>Interface</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>pistes_qualifiees</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>Adresse_e_mail__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualifié</value>
        </filters>
        <label>pistes qualifiees</label>
        <language>fr</language>
        <sharedTo>
            <group>Vues_DPM</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Formation_Courte</fullName>
        <active>true</active>
        <businessProcess>Formation initiale</businessProcess>
        <label>Formation Courte</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fundraising_B2C</fullName>
        <active>true</active>
        <businessProcess>Sur Mesure</businessProcess>
        <label>Fundraising B2C</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partenariat_Fundraising</fullName>
        <active>true</active>
        <businessProcess>Sur Mesure</businessProcess>
        <label>Partenariat Fundraising</label>
    </recordTypes>
    <recordTypes>
        <fullName>Principal</fullName>
        <active>true</active>
        <businessProcess>Formation initiale</businessProcess>
        <label>Formation initiale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Programme_Long_Diplomant</fullName>
        <active>true</active>
        <businessProcess>Formation Continue</businessProcess>
        <label>Programme Long Diplômant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sur_Mesure</fullName>
        <active>true</active>
        <businessProcess>Sur Mesure</businessProcess>
        <label>Formation intra-entreprise</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>RG_PISTE01_Motif_abandon_obligatoire</fullName>
        <active>true</active>
        <description>Le champ motif d&apos;abandon est obligatoire si le statut de la piste est Abandon</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
and( 
ISPICKVAL(Status,&quot;Abandon&quot;), 
ISPICKVAL(Motif_d_abandon__c,&quot;&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>Motif_d_abandon__c</errorDisplayField>
        <errorMessage>Le champ motif d&apos;abandon est obligatoire si le statut de la piste est Abandon</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_PIST_01_DON_002</fullName>
        <active>true</active>
        <description>L’état est obligatoire si le pays est les états unis ou le Canada</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
and( 
OR 
( 
Adresse_Pays__r.Name = &quot;ÉTATS-UNIS&quot; , 
Adresse_Pays__r.Name = &quot;CANADA&quot; 
), 
isblank(   Adresse_etat__r.Name   ) 
)
)</errorConditionFormula>
        <errorDisplayField>Adresse_etat__c</errorDisplayField>
        <errorMessage>Le champs Etat est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_PIST_01_DON_003</fullName>
        <active>true</active>
        <description>Le pays est obligatoire si l’un des champs « adresse » est rempli</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( AND( 
OR 
( 
Adresse_code_postal__c &lt;&gt; &quot;&quot;, 
Adresse_D_partement__c &lt;&gt; &quot;&quot;, 
Adresse_etat__c &lt;&gt; &quot;&quot;, 
Adresse_Rue__c &lt;&gt; &quot;&quot;, 
Adresse_Ville__c &lt;&gt; &quot;&quot;, 
Adresse_Ligne_2__c &lt;&gt; &quot;&quot;, 
Adresse_Ligne_3__c &lt;&gt; &quot;&quot; 
), 
ISBLANK( Adresse_Pays__c )
)
)</errorConditionFormula>
        <errorDisplayField>Adresse_Pays__c</errorDisplayField>
        <errorMessage>Le champ Pays est obligatoire</errorMessage>
    </validationRules>
</CustomObject>